Support is provided for several async libraries:
* `core.async`: Macros `chan-span/async-bound-chan-span` and `chan-span/chan-span-binding`
* `CompletableFuture` compatible such as `auspex`, `promesa` and `whew`: Macros `span/async-bound-cf-span` and `span/cf-span-binding`
* `Manifold`: Macros `d-span/async-bound-d-span` and `d-span/d-span-binding`
- [ADD] Refactored and extended microservice examples to demonstrate the new macros supporting async spans.
- [ADD] New example `anonymise-app` that demonstrates async spans with several async libraries.
- [ADD] New example `word-stream-app` that demonstrates manual instrumentation of a `core.async.flow` application.
- [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
This is implemented using the StackWalker API for performance reasons, starting in Java 9.
If StackWalker is not available, the attribute is not populated.
- [ADD] Updated `span/new-span!` to provide defaults for source location, similar to other functions and macros that
create spans. Note: `new-span!` is now a macro.
- [ADD] New middleware `span/wrap-span` and `span/wrap-bound-span` to create a span around subsequent processing.
These can be used as an alternative to the deprecated `wrap-exception-event` to record uncaught exceptions before they are transformed.
- Bump deps
* [MAINT] OpenTelemetry `1.54.0`, semconv `1.34.0`, instrumentation `2.19.0-alpha`

=== `0.2.8` (2025-05-22)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.50.0`, semconv `1.32.0`, instrumentation `2.16.0-alpha`
** [BREAK] Deprecated `wrap-exception-event` and `exception-event-interceptor`.
These will be stubbed out and later removed in future releases.