@@ -8,4 +8,5 @@
            io.opentelemetry.semconv/opentelemetry-semconv {:mvn/version "1.34.0"}
            io.opentelemetry.semconv/opentelemetry-semconv-incubating {:mvn/version "1.34.0-alpha"}}
  :aliases {:provided {:extra-deps {org.clojure/core.async {:mvn/version "1.9.808-alpha1"}
-                                   manifold/manifold      {:mvn/version "0.4.3"}}}}}
+                                   manifold/manifold      {:mvn/version "0.4.3"}
+                                   missionary/missionary  {:mvn/version "b.46"}}}}}
